<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".view.info.MyInfoFragment"
        android:padding="10dp"
        android:background="@drawable/gradient_background2">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/strName"
            android:layout_margin="8dp"
            android:textSize="19sp"
            android:textStyle="bold"
            android:padding="5dp"
            android:fontFamily="@font/roboto"
            />

        <EditText
            android:id="@+id/myInfoTxtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/colorTextBlue"
            android:background="@drawable/background_white_border_black"
            android:hint="@string/strHintName"
            android:layout_margin="8dp"
            android:padding="5dp"
            android:inputType="textPersonName"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/strAge"
            android:layout_margin="8dp"
            android:fontFamily="@font/roboto"
            android:textSize="19sp"
            android:textStyle="bold"
            android:padding="5dp"
            />

        <EditText
            android:id="@+id/myInfoTxtAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/colorTextBlue"
            android:background="@drawable/background_white_border_black"
            android:hint="@string/strHintAge"
            android:layout_margin="8dp"
            android:padding="5dp"
            android:inputType="number"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/strGender"
            android:layout_margin="8dp"
            android:fontFamily="@font/roboto"
            android:textSize="19sp"
            android:textStyle="bold"
            android:padding="5dp"
            />

        <Spinner
            android:id="@+id/myInfoSpnGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/colorTextBlue"
            android:layout_margin="8dp"
            android:padding="5dp"
            android:entries="@array/arrGender"
            android:background="@drawable/spinner_background"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/strDoctorName"
            android:layout_margin="8dp"
            android:fontFamily="@font/roboto"
            android:textSize="19sp"
            android:textStyle="bold"
            android:padding="5dp"
            />

        <EditText
            android:id="@+id/myInfoTxtDtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/colorTextBlue"
            android:background="@drawable/background_white_border_black"
            android:hint="@string/strHintDrName"
            android:layout_margin="8dp"
            android:padding="5dp"
            android:inputType="textPersonName"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/strMedicalHistory"
            android:layout_margin="8dp"
            android:fontFamily="@font/roboto"
            android:textSize="19sp"
            android:textStyle="bold"
            android:padding="5dp"
            />

        <EditText
            android:id="@+id/myInfoTxtMedHistory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/colorTextBlue"
            android:background="@drawable/background_white_border_black"
            android:hint="@string/strHintMedHistory"
            android:layout_margin="8dp"
            android:padding="5dp"
            android:inputType="textMultiLine"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/strPrescription"
            android:layout_margin="8dp"
            android:padding="5dp"
            android:fontFamily="@font/roboto"
            android:textSize="19sp"
            android:textStyle="bold"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="8dp"
            android:padding="10dp"
            android:gravity="center_vertical"
            >
            <ImageView
                android:id="@+id/myInfoImgPrescription"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/placeholder"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/strPrescriptionHint"
                android:textSize="18sp"
                android:textStyle="italic"
                android:padding="8dp"
                />
        </LinearLayout>

        <Button
            android:id="@+id/myInfoBtnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background_selector"
            android:fontFamily="@font/roboto"
            android:text="@string/strSaveInfo"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_margin="8dp"
            android:textColor="@color/colorButtonText"
            />

    </LinearLayout>
</ScrollView>