<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:gravity="center"
    android:background="@drawable/gradient_background2"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/strSOSto"
        android:layout_margin="8dp"
        android:textSize="19sp"
        android:textStyle="bold"
        android:padding="5dp"
        android:fontFamily="@font/roboto"
        android:textColor="@color/colorTextDark"
        />

    <LinearLayout
        android:id="@+id/number_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_margin="8dp"
        >

        <EditText
            android:id="@+id/numberEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/background_white_border_black"
            android:layout_weight="9"
            android:hint="@string/enter_number"
            android:padding="5dp"
            android:inputType="phone"
            android:textColor="@color/colorTextBlue"
            />

        <ImageView
            android:id="@+id/contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/contact"
            />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/strSosText"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="32dp"
        android:textSize="19sp"
        android:textStyle="bold"
        android:padding="5dp"
        android:fontFamily="@font/roboto"
        android:textColor="@color/colorTextDark"
        />

    <EditText
        android:id="@+id/messageEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_white_border_black"
        android:minHeight="100dp"
        android:layout_margin="8dp"
        android:ems="10"
        android:hint="@string/enter_message"
        android:gravity="top"
        android:padding="10dp"
        android:inputType="textMultiLine"
        android:textColor="@color/colorTextBlue"
        />

    <Button
        android:id="@+id/sendButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background_selector"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/roboto"
        android:text="@string/send_message"
        android:textSize="18sp"
        android:textColor="@color/colorButtonText"
        />
</LinearLayout>