<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/invPopupTvTitle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/gradient_background1"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:text="@string/strInvPopupHeader"
            android:textColor="@color/colorText"
            android:textSize="20sp"
            android:textStyle="bold" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:background="@drawable/gradient_background2">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/strInvPopupMedName"
                android:textSize="18sp"
                android:layout_margin="5dp"
                android:padding="5dp"
                />
            <EditText
                android:id="@+id/invPopupTxtMedName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_white_border_black"
                android:inputType="text"
                android:hint="@string/strPopupMedNameHint"
                android:autofillHints=""
                android:layout_margin="5dp"
                android:padding="5dp"
                android:fontFamily="@font/roboto"
                android:textColor="@color/colorTextBlue"
                android:textSize="18sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/strInvPopupMedType"
                android:textSize="18sp"
                android:layout_margin="5dp"
                android:padding="5dp"
                />
            <Spinner
                android:id="@+id/invPopupSpnMedType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/spinner_background"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/strInvPopupMedQuantity"
                android:textSize="18sp"
                android:layout_margin="5dp"
                android:padding="5dp"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="3"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_margin="5dp"
                >
                <EditText
                    android:id="@+id/invPopupTxtMedQuantity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_white_border_black"
                    android:hint="@string/strInvMedQuantityHint"
                    android:inputType="numberDecimal"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:fontFamily="@font/roboto"
                    android:textColor="@color/colorTextBlue"
                    android:textSize="18sp"/>
                <Spinner
                    android:id="@+id/invPopupSpnQuantityUnit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:padding="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
                    android:gravity="center"
                    android:background="@drawable/spinner_background"
                    android:entries="@array/arrMedQuantityType"/>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/strInvPopupQuantityWarningHint"
                android:textSize="18sp"
                android:layout_margin="5dp"
                android:padding="5dp"
                />
            <EditText
                android:id="@+id/invPopupTxtMedWarningQuantity"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@drawable/background_white_border_black"
                android:hint="5"
                android:inputType="numberDecimal"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:fontFamily="@font/roboto"
                android:textColor="@color/colorTextBlue"
                android:textSize="18sp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:padding="5dp">
                <Button
                    android:id="@+id/InvPopupBtnCancel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/strCancel"
                    android:layout_margin="8dp"
                    android:background="@drawable/button_background_selector"
                    android:fontFamily="@font/roboto"
                    android:textSize="16sp"
                    android:textColor="@color/colorButtonText"
                    android:textStyle="bold"/>
                <Button
                    android:id="@+id/InvPopupBtnAdd"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/strAdd"
                    android:layout_margin="8dp"
                    android:background="@drawable/button_background_selector"
                    android:fontFamily="@font/roboto"
                    android:textSize="16sp"
                    android:textColor="@color/colorButtonText"
                    android:textStyle="bold"/>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</ScrollView>