<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.reminder.ReminderManageActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/gradient_background2"
        >
        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/homeToolbar"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/gradient_background1"
                app:popupTheme="@style/AppTheme.PopupOverlay" >
                <ImageView
                    android:id="@+id/home_icon"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:background="@drawable/reminder_screen"/>
                <TextView
                    android:id="@+id/home_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/strReminders"
                    android:textSize="22sp"
                    android:textColor="@color/colorLightCream"
                    android:textStyle="bold"
                    android:fontFamily="@font/roboto"
                    android:padding="10dp"/>
            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>
        <TextView
            android:id="@+id/remManageActTvWarningNoInventory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/strMedInventoryNotSetupWarning"
            android:layout_gravity="center"
            android:padding="20dp"
            android:textStyle="italic"
            android:textSize="20sp"
            android:layout_margin="20dp"
            android:textColor="@color/colorRed"
            android:background="@drawable/background_white_border_black"
            />

        <Button
            android:id="@+id/remManageActBtnWarningGoBack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/strGoBack"
            android:padding="10dp"
            android:textSize="20sp"
            android:layout_margin="20dp"
            android:textColor="@color/colorButtonText"
            android:background="@drawable/button_background_selector"
            />
        <FrameLayout
            android:id="@+id/remActivityFragmentContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
    </LinearLayout>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:tag="@string/strAdd"
        app:srcCompat="@drawable/alarm_add_white_48" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>